<resources>
    <string name="app_name">ApolloVSPan APP</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="teamA">Apollo</string>
    <string name="teamB">Pan</string>
    <string name="bravo">Bravo!</string>
    <string name="intensity">Intensity:&#009;</string>
    <string name="melody">Melody:&#009;</string>
    <string name="harmony">Harmony:&#009;</string>
    <string name="rhythm">Rhythm:&#009;</string>
    <string name="reset">Return Duel</string>

</resources>
