<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    tools:context="com.example.utente.counterapp_definitive.MainActivity">


    <LinearLayout style="@style/context">

        <LinearLayout
            style="@style/column"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                style="@style/team"
                android:text="@string/teamA" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/pointcontext">

                <ImageView
                    android:id="@+id/apollo_id"
                    style="@style/portrait"
                    android:src="@drawable/apollo" />

                <TextView
                    android:id="@+id/apollo_music"
                    style="@style/point"
                    android:text="@string/zero" />

            </LinearLayout>

            <Button
                style="@style/bravobutton"
                android:onClick="givePraiseToApollo"
                android:text="@string/bravo" />

            <RelativeLayout style="@style/buttonlist">

                <TextView
                    android:id="@+id/apollo_intensity"
                    style="@style/textgoal"
                    android:text="@string/intensity" />

                <TextView
                    android:id="@+id/apollo_i_score"
                    style="@style/goal"
                    android:layout_toRightOf="@+id/apollo_intensity"
                    android:text="@string/zero" />

                <Button
                    style="@style/goalbutton"
                    android:background="@color/colorIntensity"
                    android:onClick="addIntensePraiseToA"
                    android:text="@string/plus" />

            </RelativeLayout>

            <RelativeLayout style="@style/buttonlist">

                <TextView
                    android:id="@+id/apollo_melody"
                    style="@style/textgoal"
                    android:text="@string/melody" />

                <TextView
                    android:id="@+id/apollo_m_score"
                    style="@style/goal"
                    android:layout_toRightOf="@+id/apollo_melody"
                    android:text="@string/zero" />

                <Button
                    style="@style/goalbutton"
                    android:background="@color/colorMelody"
                    android:onClick="addMelodicPraiseToA"
                    android:text="@string/plus" />

            </RelativeLayout>

            <RelativeLayout style="@style/buttonlist">

                <TextView
                    android:id="@+id/apollo_harmony"
                    style="@style/textgoal"
                    android:text="@string/harmony" />

                <TextView
                    android:id="@+id/apollo_h_score"
                    style="@style/goal"
                    android:layout_toRightOf="@+id/apollo_harmony"
                    android:text="@string/zero" />

                <Button
                    style="@style/goalbutton"
                    android:background="@color/colorHarmony"
                    android:onClick="addHarmonicPraiseToA"
                    android:text="@string/plus" />

            </RelativeLayout>

            <RelativeLayout style="@style/buttonlist">

                <TextView
                    android:id="@+id/apollo_rythm"
                    style="@style/textgoal"
                    android:text="@string/rhythm" />

                <TextView
                    android:id="@+id/apollo_r_score"
                    style="@style/goal"
                    android:layout_toRightOf="@+id/apollo_rythm"
                    android:text="@string/zero" />

                <Button
                    style="@style/goalbutton"
                    android:background="@color/colorRhythm"
                    android:onClick="addRythmicPraiseToA"
                    android:text="@string/plus" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout style="@style/column">

            <TextView
                style="@style/team"
                android:text="@string/teamB" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/pointcontext">

                <TextView
                    android:id="@+id/pan_music"
                    style="@style/point"
                    android:text="@string/zero" />

                <ImageView
                    android:id="@+id/pan_id"
                    style="@style/portrait"
                    android:src="@drawable/pan" />

            </LinearLayout>


            <Button
                style="@style/bravobutton"
                android:onClick="givePraiseToPan"
                android:text="@string/bravo" />

            <RelativeLayout style="@style/buttonlist">

                <TextView
                    android:id="@+id/pan_intensity"
                    style="@style/textgoal"
                    android:text="@string/intensity" />

                <TextView
                    android:id="@+id/pan_i_score"
                    style="@style/goal"
                    android:layout_toRightOf="@+id/pan_intensity"
                    android:text="@string/zero" />

                <Button
                    style="@style/goalbutton"
                    android:background="@color/colorIntensity"
                    android:onClick="addIntensePraiseToP"
                    android:text="@string/plus" />

            </RelativeLayout>

            <RelativeLayout style="@style/buttonlist">

                <TextView
                    android:id="@+id/pan_melody"
                    style="@style/textgoal"
                    android:text="@string/melody" />

                <TextView
                    android:id="@+id/pan_m_score"
                    style="@style/goal"
                    android:layout_toRightOf="@+id/pan_melody"
                    android:text="@string/zero" />

                <Button
                    style="@style/goalbutton"
                    android:background="@color/colorMelody"
                    android:onClick="addMelodicPraiseToP"
                    android:text="@string/plus" />

            </RelativeLayout>

            <RelativeLayout style="@style/buttonlist">

                <TextView
                    android:id="@+id/pan_harmony"
                    style="@style/textgoal"
                    android:text="@string/harmony" />

                <TextView
                    android:id="@+id/pan_h_score"
                    style="@style/goal"
                    android:layout_toRightOf="@+id/pan_harmony"
                    android:text="@string/zero" />

                <Button
                    style="@style/goalbutton"
                    android:background="@color/colorHarmony"
                    android:onClick="addHarmonicPraiseToP"
                    android:text="@string/plus" />

            </RelativeLayout>

            <RelativeLayout style="@style/buttonlist">

                <TextView
                    android:id="@+id/pan_rhythm"
                    style="@style/textgoal"
                    android:text="@string/rhythm" />

                <TextView
                    android:id="@+id/pan_r_score"
                    style="@style/goal"
                    android:layout_toRightOf="@+id/pan_rhythm"
                    android:text="@string/zero" />

                <Button
                    style="@style/goalbutton"
                    android:background="@color/colorRhythm"
                    android:onClick="addRhytmicPraiseToP"
                    android:text="@string/plus" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/reset"
        android:onClick="ReturnDuel"
        android:text="@string/reset" />

</RelativeLayout>